# SMA-Final

./: CMakeLists.txt  README.md  start.sh
src/: CMakeLists.txt
src/clients/agents/: CMakeLists.txt  Client.cpp  Client.hpp  Player.cpp  Player.hpp
src/generator/: CMakeLists.txt  Planet.cpp
src/generator/src/: noiseutils.cpp  noiseutils.cpp~  noiseutils.h
src/ref/: CMakeLists.txt  Client.cpp  Server.cpp
src/servers/: CMakeLists.txt
src/servers/game/: CMakeLists.txt  Game.cpp  Game.hpp  Game_parser.cpp  Planet.cpp  Player.cpp  Player.hpp  Users_page.cpp
src/servers/game/website/: users.html
src/servers/parsers/: CMakeLists.txt  Parser.cpp  Parser.hpp  ParserLib.cpp
src/servers/player/: CMakeLists.txt  Player.cpp  Player.hpp
